# foldit-foundry-plugin

./: .gitignore  .gitmodules  LICENSE  README.md  pixi.toml  plugin.build.toml  plugin.toml  pyproject.toml
foundry_plugin/: __init__.py  molex_io.py
tests/: test_molex_io.py
